--- a/bundle/bundle.yaml
+++ b/bundle/bundle.yaml
@@ -1,8 +1,8 @@
 apiVersion: "1"
 version: "1"
-id: "cloudbees-ci-workshop-cbci-previews-demo-controller"
-description: "CloudBees CI configuration bundle for the CloudBees CI Previews Demo"
-availabilityPattern: "cloudbees-ci-previews-demo/cbci-previews-demo/REPLACE_REPO"
+id: "cloudbees-ci-REPLACE_REPO"
+description: "CloudBees CI configuration bundle for the CloudBees CI controlelrs"
+availabilityPattern: "controllers/REPLACE_REPO/REPLACE_REPO"
 parent: "rbac-base"
 plugins:
   - "plugins.yaml"
