--- a/controller.template
+++ b/controller.template
@@ -56,6 +56,8 @@ items:
                     value: "REPLACE_REPO"
                   - name: "GITHUB_ORGANIZATION"
                     value: "cloudbees-ci-casc-gitops"
+                  - name: "GITHUB_REPO"
+                    value: "REPLACE_REPO"
                   - name: "CONTROLLER_SUBDOMAIN"
                     value: "REPLACE_REPO"
                   - name: "CASC_BUNDLE_ID"
