--- a/bundle/jcasc/jenkins.yaml
+++ b/bundle/jcasc/jenkins.yaml
@@ -27,8 +27,8 @@ globalCloudBeesPipelineTemplateCatalog:
     scm:
       github:
         configuredByUrl: true
-        credentialsId: "cloudbees-ci-previews-demo-github-app"
-        id: "cloudbees-ci-previews-demo-template-catalog"
+        credentialsId: "cbci-casc-gitops-github-app"
+        id: "${GITHUB_REPO}-template-catalog"
         repoOwner: "${GITHUB_ORGANIZATION}"
         repository: "pipeline-template-catalog"
         repositoryUrl: "https://github.com/${GITHUB_ORGANIZATION}/pipeline-template-catalog.git"
@@ -50,8 +50,8 @@ unclassified:
         modernSCM:
           scm:
             github:
-              credentialsId: "cloudbees-ci-previews-demo-github-app"
+              credentialsId: "cbci-casc-gitops-github-app"
               repoOwner: "${GITHUB_ORGANIZATION}"
               repository: "pipeline-library"
   headerLabel:
-    text: "${GITHUB_APP} - 1"
+    text: "${GITHUB_REPO} - 1"
