--- a/bundle/variables.yaml
+++ b/bundle/variables.yaml
@@ -1,4 +1,5 @@
 variables:
 - team: REPLACE_REPO
-- admin-user: kmadel-admin
-- manager-user: kmadel
+- admin-user: REPLACE_REPO-admin
+- manager-user: REPLACE_REPO-manager
+- dev-user: REPLACE_REPO-dev
